[package]
name = "fakeyou"
authors = ["chnoma"]
version = "0.1.1"
edition = "2021"
description = "Library to use FakeYou's AI TTS services"
documentation = "https://docs.rs/crate/fakeyou/"
readme = "README.md"
repository = "https://github.com/chnoma/fakeyou.rs"
license = "CC0-1.0"
keywords = ["ai", "tts", "api", "fakeyou", "voice"]
categories = ["api-bindings"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.4.0"
chrono = "0.4.24"
reqwest = {version = "0.11.18", features = ["json", "cookies", "blocking"]}
rodio = "0.17.1"
serde = "1.0.163"
serde_json = "1.0.96"
thiserror = "1.0.40"

[dependencies.uuid]
version = "1.3.2"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
